--- a/opencood/checkpoints_test/config.yaml
+++ b/opencood/checkpoints_test/config.yaml
@@ -158,14 +158,16 @@ preprocess:
     voxel_size: *id002
   cav_lidar_range: *id001
   core_method: SpVoxelPreprocessor
-root_dir: /home/shilpa/autoRL/datasets/sub_OPV2V/train
+# root_dir: /home/shilpa/autoRL/datasets/sub_OPV2V/train
+root_dir: /data/HangQiu/data/OPV2V/train
 train_params:
   batch_size: 2
   epoches: 90
   eval_freq: 2
   max_cav: 5
   save_freq: 1
-validate_dir: /home/shilpa/autoRL/datasets/sub_OPV2V/validate_sub
+# validate_dir: /home/shilpa/autoRL/datasets/sub_OPV2V/validate_sub
+validate_dir: /data/HangQiu/data/OPV2V/train
 wild_setting:
   async: false
   async_overhead: 100
