--- a/opencood_env.yml
+++ b/opencood_env.yml
@@ -2,6 +2,7 @@ name: opencood_env
 channels:
   - pytorch
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -75,30 +76,28 @@ dependencies:
       - blinker==1.8.2
       - ccimport==0.4.4
       - click==8.1.8
-      - cmake==4.0.2
       - comm==0.2.2
       - configargparse==1.7
       - contourpy==1.1.1
       - cumm==0.5.3
+      - cumm-cu118==0.4.11
       - cycler==0.12.1
-      - cython==3.0.12
-      - dash==3.0.0
+      - cython==3.1.0
+      - dash==3.0.4
       - decorator==5.2.1
-      - easydict==1.13
       - einops==0.8.1
       - executing==2.2.0
       - fastjsonschema==2.21.1
       - filelock==3.16.1
       - fire==0.7.0
       - flask==3.0.3
-      - fonttools==4.56.0
+      - fonttools==4.57.0
       - fsspec==2025.3.0
-      - huggingface-hub==0.29.3
-      - imageio==2.35.1
+      - huggingface-hub==0.31.2
       - importlib-metadata==8.5.0
       - importlib-resources==6.4.5
       - ipython==8.12.3
-      - ipywidgets==8.1.5
+      - ipywidgets==8.1.7
       - itsdangerous==2.2.0
       - jedi==0.19.2
       - jinja2==3.1.6
@@ -106,23 +105,18 @@ dependencies:
       - jsonschema==4.23.0
       - jsonschema-specifications==2023.12.1
       - jupyter-core==5.7.2
-      - jupyterlab-widgets==3.0.13
+      - jupyterlab-widgets==3.0.15
       - kiwisolver==1.4.7
       - lark==1.2.2
-      - lazy-loader==0.4
-      - llvmlite==0.32.1
       - markupsafe==2.1.5
-      - matplotlib==3.3.4
+      - matplotlib==3.7.5
       - matplotlib-inline==0.1.7
-      - narwhals==1.31.0
+      - narwhals==1.39.1
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.1
-      - ninja==1.11.1.4
-      - numba==0.49.0
-      - open3d==0.19.0
-      - opencv-python==4.5.1.48
-      - packaging==24.2
+      - open3d==0.18.0
+      - opencv-python==4.5.5.62
+      - packaging==25.0
       - pandas==2.0.3
       - parso==0.8.4
       - pccm==0.4.16
@@ -130,9 +124,9 @@ dependencies:
       - pickleshare==0.7.5
       - pkgutil-resolve-name==1.3.10
       - platformdirs==4.3.6
-      - plotly==6.0.1
+      - plotly==6.1.0
       - portalocker==3.0.0
-      - prompt-toolkit==3.0.50
+      - prompt-toolkit==3.0.51
       - protobuf==5.29.4
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
@@ -141,30 +135,27 @@ dependencies:
       - pyparsing==3.1.4
       - pyquaternion==0.9.9
       - python-dateutil==2.9.0.post0
-      - pytz==2025.1
-      - pywavelets==1.4.1
+      - pytz==2025.2
       - pyyaml==6.0.2
       - referencing==0.35.1
       - retrying==1.3.4
       - rpds-py==0.20.1
       - safetensors==0.5.3
-      - scikit-image==0.21.0
       - scikit-learn==1.3.2
-      - scipy==1.10.0
+      - scipy==1.10.1
       - shapely==2.0.0
       - six==1.17.0
+      - spconv-cu118==2.3.6
       - stack-data==0.6.3
-      - stringcase==1.2.0
       - tensorboardx==2.6.2.2
       - termcolor==2.4.0
       - threadpoolctl==3.5.0
-      - tifffile==2023.7.10
       - timm==1.0.15
       - tqdm==4.67.1
       - traitlets==5.14.3
       - tzdata==2025.2
       - wcwidth==0.2.13
       - werkzeug==3.0.6
-      - widgetsnbextension==4.0.13
+      - widgetsnbextension==4.0.14
       - zipp==3.20.2
-prefix: /home/shilpa/anaconda3/envs/opencood_env
+prefix: /home/csgrad/smukh039/miniforge3/envs/opencood_env
